--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,10 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 21.12b0
-    hooks:
-    -   id: black
+- repo: https://github.com/antonbabenko/pre-commit-terraform
+  rev: v1.74.1 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
+  hooks:
+    # - id: terraform_fmt
+    - id: terraform_docs
+    - id: terraform_checkov
+      args:
+        - --args=--quiet
+        # - --args=--skip-check CKV2_AWS_8
